@@ -1,3 +1,7 @@
+2009-06-09
+	* Fixed a regression which causes fonts to not be rendered properly with
+	certain types of windows
+
 2009-06-07
 	* Conky 1.7.1 released
 
